--- a/QuanLyNhaHang/src/main/webapp/resources/css/index.css
+++ b/QuanLyNhaHang/src/main/webapp/resources/css/index.css
@@ -28,7 +28,7 @@
     --primary: #1b2021;
     --secondary: #505050;
     --success: #28a745;
-    --info: #8a8a8a;
+    --info: #17a2b8;
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
@@ -1611,7 +1611,7 @@ textarea.form-control {
     padding: 0.375rem 1rem;
     font-size: 0.8rem;
     line-height: 1.5;
-    border-radius: 0rem;
+    border-radius: 5px;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
 @media screen and (prefers-reduced-motion: reduce) {
     .btn {
@@ -1655,7 +1655,7 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
     color: #fff;
-    background-color: #505050;
+    background-color: var(--cyan);
     border-color: #505050; }
 .btn-secondary:hover {
     color: #fff;
