--- a/QuanLyNhaHang/src/main/webapp/resources/css/index.css
+++ b/QuanLyNhaHang/src/main/webapp/resources/css/index.css
@@ -3070,8 +3070,8 @@ input[type="button"].btn-block {
     word-wrap: break-word;
     background-color: rgba(51, 51, 51, 0.5);
     background-clip: border-box;
-    border: 0px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0rem; }
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.3rem; }
 .card > hr {
     margin-right: 0;
     margin-left: 0; }
@@ -6407,3 +6407,14 @@ body > * {
 .animate-in-right.out-of-viewport {
     opacity: 0;
     left: 5%; }
+#form-payment input{
+    background-color: transparent ;
+    color: #0a0c0c;
+    font-weight: bold;
+    border-width: 0;
+}
+#form-payment{
+    color: #0a0c0c;
+    font-weight: bold;
+    border-width: 0;
+}
